--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.generate-ddl=true
-#spring.jpa.show-sql=true
+#configuracion Generica.
+server.port=8080
+
+#Configuracion de Mysql , Modificar pom.xml  y descomentar el Driver Mysql
 #spring.datasource.url= jdbc:mysql://localhost:3306/securitydb?useSSL=false&serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=1234
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+#configuracion de H2 => Base de Datos en Memoria
 spring.datasource.url= jdbc:h2:mem:securitydb;NON_KEYWORDS=user
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -14,9 +16,11 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.defer-datasource-initialization=true
+
+#configuracion Generica.
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
