incorporacion de Swagger -> SpringDoc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,14 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+
+#configuracion spingDoc
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/doc/swagger-ui.html
+springdoc.packages-to-scan=com.mulloa.demobci.Controller
+#springdoc.paths-to-match=/test/**, /support/**, /xyz/**
+
+
+
+
